[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/gut/UserFileViewer.gd" type="Script" id=1]

[node name="UserFileViewer" type="WindowDialog"]
margin_right = 638.0
margin_bottom = 494.0
popup_exclusive = true
window_title = "View  File"
resizable = true
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FileDialog" type="FileDialog" parent="."]
margin_right = 416.0
margin_bottom = 184.0
rect_min_size = Vector2( 400, 140 )
rect_scale = Vector2( 2, 2 )
popup_exclusive = true
window_title = "Open a File"
mode = 0
access = 1
show_hidden_files = true
current_dir = "user://"
current_path = "user://"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="."]
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 7.0
margin_top = 3.0
margin_right = 0.5
margin_bottom = -25.5
rect_scale = Vector2( 2, 2 )
text = "In publishing and graphic design, Lorem ipsum is a placeholder text commonly used to demonstrate the visual form of a document or a typeface without relying on meaningful content. Lorem ipsum may be used before final copy is available, but it may also be used to temporarily replace copy in a process called greeking, which allows designers to consider form without the meaning of the text influencing the design.

Lorem ipsum is typically a corrupted version of De finibus bonorum et malorum, a first-century BCE text by the Roman statesman and philosopher Cicero, with words altered, added, and removed to make it nonsensical, improper Latin.

Versions of the Lorem ipsum text have been used in typesetting at least since the 1960s, when it was popularized by advertisements for Letraset transfer sheets. Lorem ipsum was introduced to the digital world in the mid-1980s when Aldus employed it in graphic and word-processing templates for its desktop publishing program PageMaker. Other popular word processors including Pages and Microsoft Word have since adopted Lorem ipsum as well."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OpenFile" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -157.0
margin_top = -47.5
margin_right = -83.0
margin_bottom = -27.5
rect_scale = Vector2( 2, 2 )
text = "Open File"

[node name="Close" type="Button" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 16.5
margin_top = -51.5
margin_right = 90.5
margin_bottom = -31.5
rect_scale = Vector2( 2, 2 )
text = "Close"
[connection signal="file_selected" from="FileDialog" to="." method="_on_FileDialog_file_selected"]
[connection signal="popup_hide" from="FileDialog" to="." method="_on_FileDialog_popup_hide"]
[connection signal="pressed" from="OpenFile" to="." method="_on_OpenFile_pressed"]
[connection signal="pressed" from="Close" to="." method="_on_Close_pressed"]
